# bugyi-chops

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/bugyi_chops/: __init__.py  _common.py  fix_just.py  recent_audits.py  toobig_split.py
tests/: conftest.py  test_fix_just.py  test_recent_audits.py  test_toobig_split.py
